# python_minisy_asm

./: README.md  build_entry.py  minisys-asm.spec  requirements.txt  setup.py  test_bios_protection.S
bios_output/: bios_text.coe  led_control (1).hex  led_control (1)_serial.txt  led_control (1)_text.coe
minisys_asm.egg-info/: entry_points.txt  top_level.txt
output/: led_control_new.hex  led_control_new_serial.txt  led_control_new_text.coe
output_led/: led_control_serial.txt  led_control_text.coe
py_minisys_asm/: README.md  assembler.py  convert.py  instruction.py  linker.py  main.py  pyproject.toml  register.py  utils.py
py_minisys_asm/minisys_asm.egg-info/: PKG-INFO  SOURCES.txt
py_minisys_asm/py_minisys_asm/: __init__.py  assembler.py  cli.py  convert.py  instruction.py  linker.py  main.py  register.py  utils.py
py_minisys_asm/py_minisys_asm/snippet/: example.s  minisys-bios.asm  minisys-interrupt-entry.asm  minisys-interrupt-handler.asm
py_minisys_asm/snippet/: custom_bios_minimal_jump.asm  example.s  minisys-bios.asm
test/: led_control (1).asm  led_control.asm  led_control_new.asm  test_full_features.py  test_rv32i_instructions.py
