[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "minisys-asm"
version = "1.0.0"
description = "Minisys Assembler - Convert Minisys assembly code to machine code"
readme = "README.md"
authors = [
    { name = "SEU Minisys Team" }
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Assemblers",
    "Topic :: Education",
]
keywords = ["minisys", "assembler", "mips", "education"]
requires-python = ">=3.6"
license = { text = "MIT" }

[project.scripts]
minisys-asm = "py_minisys_asm.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["py_minisys_asm*"]

[tool.setuptools.package-data]
py_minisys_asm = ["snippet/*.s", "snippet/*.asm"]